--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
   background: #0f3854;
   background: radial-gradient(ellipse at center, #0a2e38 0%, #000000 70%);
   background-size: 100%;
-  font-family: 'Share Tech Mono', monospace;
+  font-family: "Share Tech Mono", monospace;
 }
 .center {
   position: absolute;
@@ -14,15 +14,37 @@ body {
   top: 50%;
   transform: translate(-50%, -50%);
   display: flex;
+  position: relative;
 }
 button {
   border-radius: 10px;
   border: transparent;
-  box-shadow: 0 0 20px rgba(10, 175, 230, 1),  0 0 20px rgba(10, 175, 230, 0);
-  font-weight:bold;
+  box-shadow: 0 0 20px rgba(10, 175, 230, 1), 0 0 20px rgba(10, 175, 230, 0);
+  font-weight: bold;
   letter-spacing: 0.1em;
   font-size: 16px;
   margin: 15px;
   width: 100px;
   height: 50px;
+}
+.output {
+  width: auto;
+  height: auto;
+  box-shadow: 0 0 20px rgba(10, 175, 230, 1), 0 0 20px rgba(10, 175, 230, 0);
+  font-weight: bold;
+  letter-spacing: 0.1em;
+  font-size: 16px;
+  background-color: whitesmoke;
+  border: transparent;
+  border-radius: 10px;
+  position: absolute;
+  left: 50%;
+  top: 70%;
+  transform: translate(-50%, -50%);
+}
+.green {
+  color: green;
+}
+.red {
+  color: tomato;
 }
