--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,8 @@ button {
   height: 50px;
 }
 .output {
-  width: auto;
+  
+  width: 400px;
   height: auto;
   box-shadow: 0 0 20px rgba(10, 175, 230, 1), 0 0 20px rgba(10, 175, 230, 0);
   font-weight: bold;
